--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@
             <br/>
             Y axis
             <select id="ylabel">
-                <option value="eps">eps</option>
-                <option value="cpu_time">time</option>
-                <option value="size">size</option>
-                <option value="max_err">max_err</option>
-                <option value="avg_err" selected>avg_err</option>
+                <option value="eps">epsilon</option>
+                <option value="cpu_time">Update Time(microsecond)</option>
+                <option value="size">Space(MB)</option>
+                <option value="max_err">Max Error</option>
+                <option value="avg_err" selected>Average Error</option>
             </select>
             <input type="checkbox" name="ylog" checked>Log scale <br/>
             Size: <input type="text" name="width" value="800" size="5"> x <input type="text" name="height" value="600" size="5"><br/>
