--- a/index.html
+++ b/index.html
@@ -285,8 +285,7 @@
             </div>
         </div>
         <div style="position:absolute;right:20px;top:20px;">
-            X: <span id='mouse_x_text'></span><br/>
-            Y: <span id='mouse_y_text'></span><br/>
+            X: <span id='mouse_x_text'></span> Y: <span id='mouse_y_text'></span><br/>
             <div id="figure"></div>
         </div>
 
