--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             Y axis
             <select id="ylabel">
                 <option value="eps">epsilon</option>
-                <option value="cpu_time">Update Time(microsecond)</option>
+                <option value="cpu_time">Update Time(ms)</option>
                 <option value="size">Space(MB)</option>
                 <option value="max_err">Max Error</option>
                 <option value="avg_err" selected>Average Error</option>
