--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Quantiles over Data Streams: An Experimental Study</title>
         <script type="text/javascript" src="jquery.js"></script>
         <script type="text/javascript" src="flot/jquery.flot.js"></script>
@@ -239,7 +240,7 @@
     </head>
     <body>
         <div style="height:20px;padding:5px;">This page shows the complete experimental results for the paper "Quantile over Data Streams: An Experimental Study.<br/>The source code are still under construction, please contact Lu Wang &lt;luwang@cse.ust.hk&gt; for undocumented code.</div>
-        <div style="margin-top:20px;margin-bottom:13px;padding:7px;border:1px solid;width:300px;float:left;">
+        <div style="margin-top:20px;margin-bottom:13px;padding:7px;border:1px solid;width:300px;">
             <input type="checkbox" name="show_cach_register" checked>Cash Register
             <input type="checkbox" name="show_turnstile" checked>Turnstile<br/>
             X axis
@@ -285,7 +286,7 @@
 
             </div>
         </div>
-        <div style="margin-right:20px;margin-top:20px;">
+        <div style="position:relative;margin-right:20px;margin-top:20px;margin-left:300px;">
             X: <span id='mouse_x_text'></span> Y: <span id='mouse_y_text'></span><br/>
             <div id="figure"></div>
         </div>
