--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             </div>
         </div>
-        <div style="position:relative;margin-right:20px;margin-top:20px;margin-left:300px;">
+        <div style="position:absolute;left:400px;top:40px;">
             X: <span id='mouse_x_text'></span> Y: <span id='mouse_y_text'></span><br/>
             <div id="figure"></div>
         </div>
