--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         </script>
     </head>
     <body>
-        <div style="height:20px;padding:5px;">This page shows the complete experimental results for the paper "Quantile over Data Streams: An Experimental Study.<br/>The source code are still under construction, please contact Lu Wang &lt;luwang@cse.ust.hk&gt; for undocumented code.</div>
+        <div style="height:20px;padding:5px;">This page shows the complete experimental results for the paper "Quantile over Data Streams: An Experimental Study".<br/>The source code are still under construction, please contact Lu Wang &lt;luwang@cse.ust.hk&gt; for undocumented code.</div>
         <div style="margin-top:20px;margin-bottom:13px;padding:7px;border:1px solid;width:300px;">
             <input type="checkbox" name="show_cach_register" checked>Cash Register
             <input type="checkbox" name="show_turnstile" checked>Turnstile<br/>
