--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             </div>
         </div>
-        <div style="position:absolute;left:400px;top:70px;">
+        <div style="position:absolute;left:400px;top:70px;padding-right:40px;">
             X: <span id='mouse_x_text'></span> Y: <span id='mouse_y_text'></span><br/>
             <div id="figure"></div>
         </div>
